[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.package_description }}"
readme = "README.md"
authors = [
    {name = '{{ cookiecutter.full_name }}', email = '{{ cookiecutter.author_email }}'}
]
requires-python = ">=3.9,<4"
dependencies = [
    "bx_py_utils",  # https://github.com/boxine/bx_py_utils
    "rich",  # https://github.com/Textualize/rich
    "typer[all]",  # https://github.com/tiangolo/typer
]
[project.optional-dependencies]
tests = [
    "manageprojects",  # https://github.com/jedie/manageprojects
    "pip-tools",  # https://github.com/jazzband/pip-tools/
    "tox",  # https://github.com/tox-dev/tox
    "coveralls",  # http://github.com/TheKevJames/coveralls-python
    "darker",  # https://github.com/akaihola/darker
    "isort",  # https://github.com/pycqa/isort
    "flake8",  # https://github.com/pycqa/flake8
    "EditorConfig",  # https://github.com/editorconfig/editorconfig-core-py
    "safety",  # https://github.com/pyupio/safety
    "mypy",  # https://github.com/python/mypy
    "tomli",  # https://github.com/hukkin/tomli
    "twine",  # https://github.com/pypa/twine
    #
    # Work-a-round for:
    # https://github.com/jazzband/pip-tools/issues/994#issuecomment-1321226661
    "typing-extensions>=3.10",
]

[project.urls]
Documentation = "{{ cookiecutter.package_url }}"
Source = "{{ cookiecutter.package_url }}"

[project.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["{{ cookiecutter.package_name }}*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.darker]
src = ['.']
revision = "origin/main..."
line_length = 119
verbose = true
skip_string_normalization = true
diff = false
check = false
stdout = false
isort = true
lint = [
    "flake8",
]
log_level = "INFO"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
profile='black'
skip_glob=['.*', '*/htmlcov/*']
known_first_party=['{{ cookiecutter.package_name }}']
line_length=119
lines_after_imports=2


[tool.flake8]
statistics = "True"
ignore = ["D203" , "W503"]
max-line-length = 119
exclude = '''
    .git,
'''


[tool.coverage.run]
branch = true
source = ['.']
omit = ['.*', '*/tests/*']
command_line = '-m unittest --verbose --locals --buffer'

[tool.coverage.report]
skip_empty = true
fail_under = 45


[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests']
