[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.package_description }}"
authors = [
    "{{ cookiecutter.full_name }} <{{ cookiecutter.author_email }}>",
]
maintainers = [
    "{{ cookiecutter.full_name }} <{{ cookiecutter.author_email }}>",
]
homepage = "{{ cookiecutter.package_url }}"
license = "{{ cookiecutter.license }}"
readme = 'README.md'
packages = [{ include = "{{ cookiecutter.package_name }}" }]

[tool.poetry.urls]
"Bug Tracker" = "{{ cookiecutter.issues_url }}"


[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
typer = "*"  # https://github.com/tiangolo/typer
rich = "*"  # https://github.com/Textualize/rich
bx_py_utils = "*"  # https://github.com/boxine/bx_py_utils

[tool.poetry.dev-dependencies]
manageprojects = "*"  # https://github.com/jedie/manageprojects
tox = ">=4.4.4"  # https://github.com/tox-dev/tox
coverage= "*"  # https://github.com/nedbat/coveragepy
flake8 = "*"  # https://github.com/pycqa/flake8
flake8-bugbear = "*"  # https://github.com/PyCQA/flake8-bugbear
EditorConfig = "*"  # https://github.com/editorconfig/editorconfig-core-py
safety = "*"  # https://github.com/pyupio/safety
mypy = "*"  # https://github.com/python/mypy
twine = "*"  # https://github.com/pypa/twine
poetry-publish = "*"  # https://github.com/jedie/poetry-publish

# https://github.com/akaihola/darker
# https://github.com/ikamensh/flynt
# https://github.com/pycqa/isort
# https://github.com/pygments/pygments
darker = { version = "*", extras = ["flynt", "isort", "color"]}

tomli = "*"  # https://github.com/hukkin/tomli
# tomli only needed for Python <3.11, but see bug:
# https://github.com/pypa/pip/issues/9644#issuecomment-1456583402
#tomli = {version = "*", markers = "python_version < \"3.11\""}  # https://github.com/hukkin/tomli

[tool.poetry.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.main:main"
publish = "{{ cookiecutter.package_name }}.publish:publish"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.darker]
src = ['.']
revision = "origin/main..."
line_length = 119
verbose = true
color = true
skip_string_normalization = true
diff = false
check = false
stdout = false
isort = true
flynt = true
lint = [
    "flake8",
]
log_level = "INFO"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
profile='black'
skip_glob=['.*', '*/htmlcov/*']
known_first_party=['{{ cookiecutter.package_name }}']
line_length=119
lines_after_imports=2


[tool.coverage.run]
branch = true
parallel = true
source = ['.']
concurrency = ["multiprocessing"]
command_line = "-m unittest --locals --verbose"

[tool.coverage.report]
omit = ['.*', '*/tests/*']
skip_empty = true
fail_under = 30
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]


[tool.tox]  # https://tox.wiki/en/latest/config.html#pyproject-toml
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{312,311,310}
skip_missing_interpreters = True

[testenv]
passenv = *
allowlist_externals = make
commands_pre =
    make install
commands =
    make test
"""


[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests']
